# data-man

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  compose.dev.yml  compose.full.yml  nova.ps1  package.json  pnpm-lock.yaml  upstream-lock.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/nova/: __init__.py  config.py  db.py  errors.py  main.py  models.py  schemas.py  state_machine.py  worker.py
backend/nova/adapters/: __init__.py  base.py  mock.py
backend/nova/services/: bootstrap.py  jobs.py  llm.py
backend/tests/: conftest.py  test_adapter.py  test_api.py  test_llm.py  test_state_machine.py
backend/tests/.runtime/: nova-test.db
deploy/: Caddyfile
deploy/economy/: README.md
deploy/modelscope/: NOVA-ModelScope-A10.ipynb  README.md  bootstrap_runtime.sh  prepare_modelscope.py  run_flash.py
deploy/upstreams/: LICENSE-AUDIT.md
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  speech.d.ts  style.css  types.ts
work/: browser_smoke.py
work/chrome-smoke-profile/: Local State
work/chrome-smoke-profile-2/: Local State
work/chrome-smoke-profile-material/: Local State
数字人通用素材/: README.md  兼容性报告.md  素材清单.csv
数字人通用素材/01_人物图片/: 01_精致棚拍_来源.url  02_亲和微笑_来源.url  03_现代时尚_来源.url  04_北京艺术光影_来源.url  05_汉服白底_来源.url
数字人通用素材/02_人物视频/: Mixkit_绿幕主持人合集_来源.url  Pexels_女性对镜说话_来源.url  正面说话人物_CC0_来源.url
数字人通用素材/03_人物语音/: 普通话女声_VivienneWong_孙子兵法_来源.url  普通话朗读_JingLi_呐喊_来源.url  普通话男声_JcGuan_百家姓_来源.url
数字人通用素材/04_背景素材/: 办公场景_CC0_来源.url  渐变抽象背景_CC0_来源.url
(+179 files in other folders)
