[project]
name = "nova-control-plane"
version = "0.1.0"
description = "NOVA digital human control plane"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1",
  "uvicorn[standard]>=0.35.0,<1",
  "sqlalchemy>=2.0.41,<3",
  "psycopg[binary]>=3.2.9,<4",
  "pydantic-settings>=2.10.0,<3",
  "python-multipart>=0.0.20,<1",
  "httpx>=0.28.1,<1"
]

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
  "pytest-cov>=6.2.1,<7",
  "hypothesis>=6.136.6,<7"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["nova"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nova"]

